fix: card bg color for dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -140,3 +140,7 @@ p.locked-twin {
   color: #212529;
   border-color: #212529;
 }
+
+[data-bs-color-scheme=dark] .card {
+  background-color: #2a2a2a;
+}
